--- a/app/src/main/res/layout/fragment_display_results.xml
+++ b/app/src/main/res/layout/fragment_display_results.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
+        xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/layout">
 
     <data>
-
+        <import type="android.view.View"/>
         <variable
                 name="viewModel"
                 type="org.fuzz.wellyrecycling.results.DisplayResultsViewModel"/>
     </data>
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
@@ -17,170 +18,41 @@
             android:paddingTop="@dimen/activity_vertical_margin"
             android:paddingBottom="@dimen/activity_vertical_margin">
 
-        <TextView
-                android:id="@+id/address_line1"
-                android:text="@{viewModel.street.street}"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="12pt"
-                android:textStyle="bold"
-                android:textColor="#FFA800"
-                android:layout_gravity="center_horizontal"/>
-
-        <TextView
-                android:text="@{viewModel.street.suburb}"
-                android:id="@+id/address_line2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="24px"
-                android:textSize="12pt"
-                android:textStyle="bold"
-                android:textColor="#FFA800"
-                android:layout_gravity="center_horizontal"/>
-
-        <View
-                android:layout_width="match_parent"
-                android:layout_height="1px"
-                android:layout_marginBottom="24dp"
-                android:background="#000"/>
-
-        <TextView
-                android:text="@string/next_collection_date_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="24px"/>
-
-        <RelativeLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="48px">
-
-            <ImageButton
-                    android:id="@+id/previous_week"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_centerVertical="true"
-                    android:background="@drawable/left_arrow"/>
-
-            <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true">
-
-                <TextView
-                        android:id="@+id/date_line_1"
-                        android:text="Friday, 23 May"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="10pt"
-                        android:textStyle="bold"
-                        android:layout_gravity="center_horizontal"/>
-
-                <TextView
-                        android:id="@+id/date_line_2"
-                        android:text="(out before 8.00 am)"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="10pt"
-                        android:textStyle="bold"
-                        android:layout_gravity="center_horizontal"/>
-            </LinearLayout>
-
-            <ImageButton
-                    android:id="@+id/next_week"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:background="@drawable/right"/>
-
-        </RelativeLayout>
-
-        <TextView
-                android:text="@string/place_on_kerb_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:layout_marginTop="24dp"
-                android:layout_marginBottom="16dp"/>
-
-        <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:weightSum="1"
-                android:layout_marginTop="16dp"
-                android:orientation="horizontal">
-
-            <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight=".49"
-                    android:paddingBottom="8dp"
-                    android:paddingTop="8dp"
-                    android:orientation="vertical">
-
-                <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:src="@drawable/wheelie_bin"/>
-
-                <TextView
-                        android:text="Rubbish"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
-                        android:textSize="10pt"
-                        android:textStyle="bold"
-                        android:layout_gravity="center_horizontal"/>
-
-            </LinearLayout>
-
-            <View
-                    android:layout_width="1px"
-                    android:layout_height="84dp"
-                    android:layout_gravity="center_vertical"
-                    android:background="#000"/>
-
-            <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingBottom="8dp"
-                    android:paddingTop="8dp"
-                    android:layout_weight=".49"
-                    android:orientation="vertical">
-
-                <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:src="@drawable/glass_crate"/>
-
-                <TextView
-                        android:text="Recycling"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
-                        android:textSize="10pt"
-                        android:textStyle="bold"
-                        android:layout_gravity="center_horizontal"/>
-
-            </LinearLayout>
-
-        </LinearLayout>
-
         <Button
                 android:id="@+id/search_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
                 android:background="@drawable/button"
                 android:text="Search another address"
                 android:textColor="#fff"
-                android:layout_gravity="center"/>
+                android:layout_gravity="center"
+                android:layout_marginBottom="32dp"
+                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
-    </LinearLayout>
+        <ProgressBar
+                android:id="@+id/progress"
+                android:visibility="@{viewModel.loadingVisible ? View.VISIBLE : View.GONE}"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+        <TextView
+                android:id="@+id/resultsText"
+                android:visibility="@{viewModel.loadingVisible ? View.GONE : View.VISIBLE}"
+                android:text="@{viewModel.streetCollectionResult}"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
