--- a/app/src/main/res/layout/fragment_display_results.xml
+++ b/app/src/main/res/layout/fragment_display_results.xml
@@ -42,17 +42,33 @@
                 app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"/>
 
-        <TextView
-                android:id="@+id/resultsText"
-                android:visibility="@{viewModel.loadingVisible ? View.GONE : View.VISIBLE}"
-                android:text="@{viewModel.streetCollectionResult}"
+        <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                android:layout_marginStart="8dp" android:layout_marginTop="32dp"
+                app:layout_constraintTop_toTopOf="parent"
+                android:visibility="@{viewModel.loadingVisible ? View.GONE : View.VISIBLE}"
+                android:orientation="vertical">
+
+            <TextView
+                    android:id="@+id/nextCollectionDate"
+                    android:textSize="24sp"
+                    android:text="@{viewModel.collectionInformation.nextCollectionDate}"
+                    android:layout_gravity="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+            <TextView
+                    android:id="@+id/recyclingType"
+                    android:textSize="24sp"
+                    android:text="@{viewModel.collectionInformation.collectionType}"
+                    android:layout_gravity="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
