--- a/app/src/main/res/layout/fragment_display_results.xml
+++ b/app/src/main/res/layout/fragment_display_results.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
@@ -11,6 +11,7 @@
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/swipe_layout"
+            android:background="@color/card_background"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
